# pyroll-cli

./: README.md  hatch.toml  pyproject.toml
pyroll/cli/: __init__.py  __main__.py  config.py  program.py  rich.py
pyroll/cli/program/: __init__.py  create.py  edit.py  input.py  main.py  shell.py  solve.py  state.py
pyroll/cli/res/: config.toml  config.yaml  input.py
tests/: test_create_config.py  test_create_input.py  test_create_project.py  test_load_config.py  test_new.py  test_solve.py
