[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyroll-cli"
description = "PyRoll rolling simulation framework - command line interface (CLI)."
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" },
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" },
    { name = "Matthias Schmidtchen", email = "matthias.schmidtchen@imf.tu-freiberg.de" },
    { name = "Max Stirl", email = "max.stirl@imf.tu-freiberg.de" },
]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Hatch",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Natural Language :: English",
]
requires-python = ">=3.9"

dependencies = [
    "pyroll-core ~= 2.0",
    "click ~= 8.0",
    "rtoml ~= 0.9",
    "jinja2 ~= 3.0",
    "rich ~= 13.0",
    "click-repl ~= 0.2"
]

dynamic = ["version"]

[project.scripts]
pyroll = 'pyroll.cli.program:run_cli'

[project.urls]
Homepage = "https://pyroll-project.github.io"
Repository = "https://github.com/pyroll-project/pyroll-cli"
Documentation = "https://pyroll.readthedocs.io/en/latest/basic/cli.html"
